# vivado-docker

./: .dockerignore  .gitignore  AGENDA.md  AGENTS.md  Makefile  README.md  run.vivado.sh
config/: install_config.txt  xsetup_config_25.txt
davit/: Cargo.toml
davit/src/: artifacts.rs  client.rs  daemon.rs  filter.rs  main.rs  procfs.rs  protocol.rs  pty.rs  util.rs
docker/: Dockerfile  udev_stub.c
docker/base/: Dockerfile
docker/tools/: Dockerfile  entrypoint.sh
docs/: fpgatools-docker-spec.md  vivado-vitis-cli.md
installer/: .gitignore
openspec/changes/add-davit-session-cli/: tasks.md
openspec/changes/add-davit-session-cli/specs/cli-frontend/: spec.md
openspec/changes/add-davit-session-cli/specs/repo-layout/: spec.md
openspec/changes/add-parallel-gui-launch/: tasks.md
openspec/changes/archive/2026-07-14-restructure-repo-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-add-davit-session-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-parallel-gui-launch/: design.md  proposal.md  tasks.md
openspec/changes/multi-stage-image-layers/: design.md  proposal.md  tasks.md
openspec/specs/base-image/: spec.md
openspec/specs/cli-frontend/: spec.md
openspec/specs/docs-structure/: spec.md
openspec/specs/layered-image/: spec.md
openspec/specs/repo-layout/: spec.md
openspec/specs/vivado-session/: spec.md
scripts/: build.base.sh  build.tools.sh  dv  gen_auth_token.sh  run.vivado.sh  smoke.davit.sh
skills-template/davit-fpga-tools/: SKILL.md
(+10 files in other folders)
