[package]
name = "davit"
version = "0.1.0"
edition = "2021"
description = "daVit: containerized Vivado/Vitis session daemon and dv CLI"
license = "BSD-3-Clause"

[[bin]]
name = "dv"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
